Fixed layout problem when displaying clicked posts

--- a/frontend/styles/shared-styles.css
+++ b/frontend/styles/shared-styles.css
@@ -122,3 +122,7 @@ text-align: center;
 .postal {
     color: grey;
 }
+
+.main-panel {
+    width: 75%;
+}
